meja/tests/row-closed-commutes.meja
let f = fun (x1 : [> `A],
             x2 : [> `B],
             x3 : [< `A | `B | `C],
             x4 : [`A | `B | `D],
             b) => {
  let y1 = if (b) { x1; } else { x2; };
  let y2 = if (b) { x2; } else { x3; };
  let y3 = if (b) { x1; } else { x4; };
  (y1, y2, y3);
};
